[package]
name = "elastic-array"
version = "0.10.2"
authors = ["debris <marek.kotewicz@gmail.com>"]
license = "MIT"
description = "Elastic vector backed by fixed size array"
repository = "https://github.com/debris/elastic-array"
exclude = ["/sgx/*"]

[dependencies]
heapsize = { git = "https://github.com/mesalock-linux/heapsize-sgx", version = "0.4", optional = true }
sgx_tstd = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }

[dev-dependencies]
rand = "0.4"

[badges]
travis-ci = { repository = "debris/elastic-array" }

[features]
default = ["std","mesalock_sgx"]
std = [
  "heapsize"
]
mesalock_sgx = ["sgx_tstd", "std"]
